// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventListItem /> should render correctly when active 1`] = `
<EventListItem
  active={true}
  event={
    Object {
      "capacity": 10000,
      "createdAt": 1529336865706,
      "id": 1,
      "inventory": 100,
      "modifiedAt": 1529336865706,
      "name": "Mets @ Yankees",
      "revenue": 100,
      "score": 10,
      "timestamp": 1529336865706,
    }
  }
  onClick={[Function]}
/>
`;

exports[`<EventListItem /> should render correctly when not active 1`] = `
<EventListItem
  active={false}
  event={
    Object {
      "capacity": 10000,
      "createdAt": 1529336865706,
      "id": 1,
      "inventory": 100,
      "modifiedAt": 1529336865706,
      "name": "Mets @ Yankees",
      "revenue": 100,
      "score": 10,
      "timestamp": 1529336865706,
    }
  }
  onClick={[Function]}
/>
`;
